# unitygame

./: README.md  UnityVS.hg-client.CSharp.csproj  UnityVS.hg-client.sln  UnityVS.unitygame.CSharp.Editor.csproj  UnityVS.unitygame.CSharp.Plugins.csproj  UnityVS.unitygame.CSharp.csproj  UnityVS.unitygame.sln
AndroidNative/NativeInterface/: .classpath  .project
AndroidProj/nativeinterface/: AndroidManifest.xml
Assets/Bak/: resource.7z
Assets/Editor/: ExportAssetBundlesAndScene.cs
Assets/Locomotion Setup/: TestScene.unity
Assets/Module/: App.unity  Game.unity  Start.unity
Assets/Scenes/: App.unity  ScrollView.unity  Start.unity  TestNguiLocalScale.unity
Assets/Table/: Table.cs
Assets/game/: game.html
Assets/scene/: app.unity  game.unity  testscene.unity
Bak/scripts/: ReadMe.txt  Vs调用luacheck静态检查.md  scripts.luaproj  scripts.sln
Bak/src/: ReadMe.txt
Client/: UnityVS.unitygame.CSharp.Plugins.csproj  UnityVS.unitygame.CSharp.csproj  UnityVS.unitygame.sln
Client/Assets/: New Terrain 3.asset  New Terrain.asset  ReadMe.txt  Vertex.txt  aaa.txt  aaaaa.prefab  leescene03.unity  leescene05.asset  leescene05.unity
Client/EncDec/: Makefile  main.cpp
Client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Client_Start/Assets/: MySkin.guiskin  New Material.mat  test.cs
Client_Start/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Doc/: Demo 关卡设计.docx  Demo关卡2设定.docx
EncDec/: EncDec.cpp  EncDec.h  des.sln  des.vcxproj  main.cpp  mydes.cpp  mydes.h  myrc5.cpp  myrc5.h
Example/: ReadMe.txt
Msg/: ProtoConvOut.bat
Msg/Cs/: Test.cs  User.cs
Msg/Pb/: User.pb
Msg/Proto/: Test.proto  User.proto  login.proto  rpc.proto
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Shader-Test/: UnityVS.Shader-Test.CSharp.csproj  UnityVS.Shader-Test.sln
Shader-Test/ProjectSettings/: ProjectSettings.asset
SnowRoll/Assets/: Cube.controller  New Animation.anim  New Material.mat  ct-DiffuseDetail.shader  smcs.rsp
SnowRoll/ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Tools/: BuildAndroidApk.bat  ProtoToCs.bat
Tools/AIEditor/: gen-qt-projectfile.bat
Tools/BehaviorTreeEditor/: CMakeLists.txt  ReadMe.txt
Tools/BehaviorTreeEditor/BTEditor/: CMakeLists.txt
Tools/BehaviorTreeEditor/BTEditor/Inc/: Aaa.h  BTEditor.h  GlobalDefine.h  Platform.h
Tools/BehaviorTreeEditor/BTEditor/Src/: Aaa.cpp
Tools/CPP2CSharp/: .pydevproject
Tools/ExcelExport/: CMakeLists.txt  config.xml  config_bak.xml  readme.txt  table.xml  test_client.xml  test_server.xml
Tools/ExcelExport/qtexcel/: CMakeLists.txt  TableListItem.ui  maindialog.ui
Tools/ExcelExport/qtexcel/include/: ByteBuffer.hxx  ByteConverter.hxx  CAppData.hxx  CTask.hxx  DataItem.hxx  EnValue.hxx  ExcelExport.hxx  ExcelTbl.hxx  ExcelTblSort.hxx  MemLeakCheck.hxx  NSEEProperty.hxx  Platform.hxx  Property.hxx  PropertyBase.hxx  PropertyBool.hxx  PropertyDouble.hxx  PropertyFloat.hxx  PropertyIns.hxx  PropertyInt16.hxx  PropertyInt32.hxx  PropertyInt64.hxx  PropertyInt8.hxx  PropertyStr.hxx  PropertyUnsignedInt16.hxx  PropertyUnsignedInt32.hxx  PropertyUnsignedInt64.hxx  PropertyUnsignedInt8.hxx  Singleton.hxx  System.hxx  SystemEndian.hxx  TabelAttr.hxx  TableListItem.hxx  Tools.hxx  UnMemLeakCheck.hxx  WorkThread.hxx  maindialog.hxx
Tools/ExcelExport/qtexcel/src/: ADOWrap.cpp  ByteBuffer.cpp  CAppData.cpp  CTask.cpp  DataItem.cpp  ExcelExport.cpp  ExcelTbl.cpp  ExcelTblSort.cpp  NSEEProperty.cpp  Property.cpp  PropertyBool.cpp  PropertyDouble.cpp  PropertyFloat.cpp  PropertyInt16.cpp  PropertyInt32.cpp  PropertyInt64.cpp  PropertyInt8.cpp  PropertyStr.cpp  PropertyUnsignedInt16.cpp  PropertyUnsignedInt32.cpp  PropertyUnsignedInt64.cpp  PropertyUnsignedInt8.cpp  System.cpp  TabelAttr.cpp  TableListItem.cpp  Tools.cpp  WorkThread.cpp  main.cpp  maindialog.cpp
Tools/ExcelExport/tinyxml/: CMakeLists.txt
Tools/ExcelExportTest/: ItemBase.cs  ItemObject.cs  LocalFileSys.cs  TableBase.cs  TableSys.cs
server/: Clientconfig.xml  Doxyfile  InitAccount.xlsx  Makefile  autobuild.sh  check_cpu.sh  check_port.sh  config.xml  config.xml.battle  coredump_exist.sh  cppcheck  findexp  freescp.sh  go  k  killRobot.sh  lineCount.sh  makeClean.sh  makeMobile.sh  mysql_auto_start.README  restart  startRobot.sh  stopRobot.sh  stopserver  svn.diff  system  tags  traffic.sh  trash.sh
神武/: 人物属性系统.doc  神武主角基础属性.docx  道具基本属性.docx
策划/策划案/: GM指令.xlsx  (+3 more)
(+10136 files in other folders)
